@@ -1,3 +1,9 @@
+2011-10-24 Felix Natter <fnatter@gmx.net>
+	* gtypist.c, utf8.c/h: use convertFromUTF8() instead of widen()
+	  for Y/N and R/N/E. add towideupper() and iswideupper() helper
+	  functions that do they right thing depending on whether it's
+	  a UTF8 terminal or an 8bit-terminal
+
 2011-10-22 Felix Natter <fnatter@gmx.net>
 	* *.c, *.h: make gtypist run on non-utf8 locales with international lessons
 	* gtypist.c: add RETURN_CHARACTER (unicode symbol to designate newlines that
